...
          ),
          child: FloatingActionButton.extended(
            onPressed: () => _showAddDialog(context, isDark),
            backgroundColor: Colors.transparent,
            elevation: 0,
            label: const Text(
              "Add Subscription",
              style: TextStyle(
                color: Colors.black,
                fontWeight: FontWeight.bold,
              ),
            ),
            icon: const Icon(Icons.add_rounded, color: Colors.black),
...
          child: Column(
            mainAxisSize: MainAxisSize.min,
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              Text(
                widget.payment == null
                    ? "New Subscription"
                    : "Edit Subscription",
                style: TextStyle(fontSize: 20.sp, fontWeight: FontWeight.bold),
              ),
              SizedBox(height: 20.h),
              TextFormField(
                controller: _titleCtrl,
                decoration: const InputDecoration(
...
